# AdaptiveOA

./: CMakeLists.txt  README.md  TODO.md  init.sh
src/: develop.cpp  develop.hpp  main.cpp  solve.cpp  solve.hpp
src/algorithms/: IteratedLocalSearch.hpp  LocalSearch.hpp
src/algorithms/local_search_specifics/: PivotRuleBase.hpp  PivotRuleFactory.hpp  TerminateConditionBase.hpp  TerminateConditionFactory.hpp
src/algorithms/local_search_specifics/pivot_rules/: BestImprovement.hpp  FirstImprovement.hpp  Tabu.hpp  WorstImprovement.hpp
src/algorithms/local_search_specifics/terminate_conditions/: FunctionCallLimit.hpp  IterationLimit.hpp  NoLimit.hpp  TimeLimit.hpp
src/algorithms/mutation_selection/: SelectionMutationBase.hpp  SelectionMutationFactory.hpp
src/algorithms/pivot_rules/: PivotRuleBase.hpp  PivotRuleFactory.hpp
src/algorithms/pivot_rules/impl/: BestImprovement.hpp  SimulatedAnnealing.hpp
src/algorithms/terminate_conditions/: TerminateConditionBase.hpp  TerminateConditionFactory.hpp
src/core/: AlgorithmBase.hpp  FunctionBase.hpp  MutationBase.hpp  NeighborhoodBase.hpp  Score.hpp  SolutionBase.hpp
src/functions/: EvaluationFunctionGeneration.hpp  MaxSat.hpp  NK.hpp  OneMax.hpp
src/mutations/: BitFlip.hpp  PopulationMutation.hpp  SeedMutation.hpp  SpecificSeedMutation.hpp
src/neighborhoods/: BitFlipNeighborhood.hpp  PopulationMutationNeighborhood.hpp  SeedNeighborhood.hpp  SpecificSeedNeighborhood.hpp
src/solutions/: BitString.hpp  BitStringSolution.hpp  GeneratedEvaluationFunction.hpp  NKModel.hpp
src/utils/: CLI.hpp  FastCLI.hpp  Random.hpp
(+1 files in other folders)
